Fixes #1 z-index bug

--- a/public/templates/system/modules/webcam/themes/base/css/style.css
+++ b/public/templates/system/modules/webcam/themes/base/css/style.css
@@ -72,6 +72,7 @@
     bottom: -466px;
     left:50%;
     margin-left:-300px;
+    z-index:1200;
 
     -moz-border-radius:4px 4px 0 0;
     -webkit-border-radius:4px 4px 0 0;
